--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <title>Electron app</title>
+  <link rel="stylesheet" href="./bootstrap.min.css">
+  <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+  <body class="bg-secondary">
+    <ul class="list-group d-flex justify-content align-items list-group-flush">
 
+      <blockquote class="blockquote bg-lighter list-group-item py-4 text-center">
+  <p class="mb-0 " id="quote">Let us be grateful to people who make us happy, they are the charming gardeners who make our souls blossom.</p>
+  <footer class="blockquote-footer" id="source">Marcel Proust in <cite title="Source Title">Incredible</cite></footer>
+</blockquote>
+ 
+</ul>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
