completed basics and next is working with next/react

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   <link rel="stylesheet" href="./style.css">
   </head>
   <body class="bg-secondary">
-   <div id="test" class="btn btn-ms p-3 btn-info">Test</div>
+ <div class="alert alert-primary mt-3 mx-2" role="alert">
+ Desktop application made with Electron
+</div>
+<div class="alert alert-secondary mx-2" role="alert">
+  Simple work
+</div>
     <!-- You can also require other files to run in this process -->
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js"></script>
     
     </script>
   </body>
